# agentic-competitive-intelligence-mesh

./: .env.example  .gitignore  Dockerfile  README.md  dashboard.py  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
services/alert-agent/: Dockerfile
services/alert-agent/src/: main.py
services/analysis-agent/: Dockerfile
services/analysis-agent/src/: crew.py  main.py
services/ingestion-agent/: Dockerfile
services/ingestion-agent/src/: graph.py  main.py
services/reporting-agent/: Dockerfile
services/reporting-agent/src/: graph.py  main.py
shared/: __init__.py  a2a_client.py  circuit_breaker.py  database.py  observability.py  protocol_a2a.py
tests/: __init__.py  test_a2a_protocol.py  test_circuit_breaker.py  test_pipelines.py
